# MemGuard

./: README.md  pyproject.toml
memguard/: __init__.py  _colors.py  _constants.py  _profiler.py  _report.py  _suggestions.py  context.py  decorator.py  utils.py
tests/: test_memguard.py
