[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "memguard"
version     = "1.0.0"
description = "Zero-dependency Python memory leak detector and analyser."
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Aniket Maithani" }]
keywords    = [
    "memory", "leak", "profiler", "gc", "tracemalloc",
    "debug", "performance", "decorator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies    = []          # zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage   = "https://github.com/aniketmaithani/memguard"
Repository = "https://github.com/aniketmaithani/memguard"
Issues     = "https://github.com/aniketmaithani/memguard/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["memguard"]
omit   = ["tests/*"]